--- a/NonConditional/Preconditions.tex
+++ b/NonConditional/Preconditions.tex
@@ -4,7 +4,7 @@
 
 \begin{figure}
     \centering
-    \includegraphics[scale=0.7]{\master/Graphics/sokoSmall}
+    \resizebox{0.4\textwidth}{!}{\input{\master/Graphics/sokoSmall.pgf}}
     \caption{\label{fig:sokoSmall} Sokoban state with only one applicable \texttt{move-h} action. The tiles are named $t_1 \dots t_4$, from left to right. The crate object is named $c$.}
 \end{figure}
 
