--- a/Conditional/DifficulitiesLearningConditionEffects.tex
+++ b/Conditional/DifficulitiesLearningConditionEffects.tex
@@ -85,9 +85,19 @@ If $\gamma (S,a) \neq S$ and objects are interpreted as variables then $preconds
 Thus if both negative and positive preconditions are allowed a the same time use  $S \cup \neg[S^c] $ for the preconditions.
 
 \begin{figure}
-	\centering
-	\includegraphics[width=0.2\textwidth]{\master/Graphics/soko_cond_example.png}
-
+    \hspace*{0.1\textwidth}%
+    \begin{subfigure}{0.35\textwidth}
+        \centering
+        \resizebox{\linewidth}{!}{\input{\master/Graphics/moveLeftBefore.pgf}}
+        \caption{Before execution of \texttt{MoveLeft}}
+    \end{subfigure}%
+    \hspace*{0.1\textwidth}%
+    \begin{subfigure}{0.35\textwidth}
+        \centering
+        \resizebox{\linewidth}{!}{\input{\master/Graphics/moveLeftAfter.pgf}}
+        \caption{After execution of \texttt{MoveLeft}}
+    \end{subfigure}
+    \hspace*{0.1\textwidth}
 	\caption{\label{fig:ca:sokoban-moveleft-action}\texttt{MoveLeft} action being used in a sokoban world for Example~\ref{ex:ca:sokoban-moveleft-action} }
 
 \end{figure}
