--- a/Conditional/HyperGraphConstructionFromState.tex
+++ b/Conditional/HyperGraphConstructionFromState.tex
@@ -2,6 +2,8 @@
 \providecommand{\master}{..}
 \begin{document}
 
+Whenever a single grounded predicate $q$ is observed to occur in $\Delta s$ as a consequence of a state transition $\left(s, a, s'\right)$, 
+
 We will now explore how knowledge about conditional effects for an action schema $A$ can be derived from a  state transition $\left( s, a ,s' \right)$. As explained previously, each grounded predicate $q$ in $\Delta s$ is the outcome of a conditional effect for which an interpretation of its preconditions was satisfied by $s$. By Restriction~\ref{rst:ca:no-multiple-effect}, each conditional effect can have only one effect, and that effect must be unique. 
 
 \noindent\rule{\textwidth}{1pt}
@@ -30,6 +32,8 @@ As all predicates in $\Delta s$ with the same name are effects of the same condi
 Consequently, the preconditions disproven by $d(s)$ for $A'$ are only applicable to the grounded predicate $A'$ was constructed for. To find the preconditions of the conditional, a method of combining the different disproven predicates is needed.
 
 \noindent\rule{\textwidth}{1pt}
+
+
 
 % \begin{algorithm}
 %     \caption{Constructing hypergraphs from a state}\label{algo:HypGraphCtor}
