--- a/Conditional.tex
+++ b/Conditional.tex
@@ -14,7 +14,7 @@
 	\subfile{Conditional/HyperGraphConstructionFromState}
 
 \section{Hyper graph merging algorithm}
-	\subfile{Conditional/HyperGraphMergingAlgorithm}
+    \subfile{Conditional/HyperGraphMergingAlgorithm}\label{sec:C:HGMerging}
 
 \section{Collapsing hypergraphs}
 	\subfile{Conditional/CollapsingHypergraphs}
