--- a/Conditional/ExplainOurModels.tex
+++ b/Conditional/ExplainOurModels.tex
@@ -100,8 +100,10 @@ To summarize the our prior model for preconditions and effects we have the four 
 	Furthermore, in this model the notion of disjoint predicates (Restriction~\ref{rst:ca:no-disjuntive-conditionals}) is shown by the vertices not being connected through any type of edge.
 \end{example}
 
-Given a state transition $\left( s, a, s' \right)$, and a grounded predicate $p \in \Delta s$ a hypergraph for $s \cup \{p\}$ now describes 
+Consider again a state transition $\left( s, a, s' \right)$. The hypergraph constructed for $s$ (as shown above) now describes how the predicates in $s$ are interconnected without mentioning specific objects or variables. Thus, a hypergraph constructed for the set $s \cup \{ p \}$ where $p \in \Delta \left(s, s' \right)$ describes which bindings were present in $s$ when the effect $p$ occurred, and how $p$ are connected to them. In other words, such a hypergraph denotes the preconditions for the conditional that spawned $p$ which has not been disproven (since any binding absent from the hypergraph can not be a precondition, as it would have caused the conditional to fail in the interpretation that spawned $p$). To discern the predicate edge denoting $p$, it is explicitly labelled as an effect. If a hypergraph is constructed for the set $s \cup \{ q \}$ where $q \in \Delta \left(s,s'\right)$ is a predicate with the same name as $p$ but with different objects as arguments, it represents the preconditions observed for another interpretation of the conditional. Since both hypergraphs describe binding preconditions for the same conditional (under different interpretations), bindings that appear in neither of them cannot be a precondition for that conditional. Thus, we assume availability of a $merge$ function which --- given two hypergraphs describing the same conditional --- returns a new hypergraph containing only those bindings both arguments have in common. Such a merging algorithm is described in Section~\ref{sec:C:HGMerging}.
 
-for any grounded predicate $p \in \Delta s$, a hypergraph can be constructed for $s \cup \{ p \}$ with the predicate edge describing $p$ labelled as an effect. 
+Consider again a state transition $\left( s, a, s' \right)$. For any grounded predicate $p \in \Delta s$, a hypergraph constructed from the set $s \cup \{ p \}$ (with the predicate set representing $p$ labelled as an effect) describes the bindings that could be preconditions for the conditional with effect $p$ in $A$. That is, any binding that is not part of the hypergraph can not have been a precondition, as it was present in $s$. 
+
+To correlate a grounded predicate $p$ observed as an effect of $\gamma(s,a)$ with its preconditions, a hypergraph can be constructed for $s \cup \{ p \}$, where the predicate edge describing $p$ is labelled as an effect. This effect hypergraph
 
 \end{document}
