--- a/Conditional/ExplainOurModels.tex
+++ b/Conditional/ExplainOurModels.tex
@@ -100,10 +100,27 @@ To summarize the our prior model for preconditions and effects we have the four 
 	Furthermore, in this model the notion of disjoint predicates (Restriction~\ref{rst:ca:no-disjuntive-conditionals}) is shown by the vertices not being connected through any type of edge.
 \end{example}
 
-Consider again a state transition $\left( s, a, s' \right)$. The hypergraph constructed for $s$ (as shown above) now describes how the predicates in $s$ are interconnected without mentioning specific objects or variables. Thus, a hypergraph constructed for the set $s \cup \{ p \}$ where $p \in \Delta \left(s, s' \right)$ describes which bindings were present in $s$ when the effect $p$ occurred, and how $p$ are connected to them. In other words, such a hypergraph denotes the preconditions for the conditional that spawned $p$ which has not been disproven (since any binding absent from the hypergraph can not be a precondition, as it would have caused the conditional to fail in the interpretation that spawned $p$). To discern the predicate edge denoting $p$, it is explicitly labelled as an effect. If a hypergraph is constructed for the set $s \cup \{ q \}$ where $q \in \Delta \left(s,s'\right)$ is a predicate with the same name as $p$ but with different objects as arguments, it represents the preconditions observed for another interpretation of the conditional. Since both hypergraphs describe binding preconditions for the same conditional (under different interpretations), bindings that appear in neither of them cannot be a precondition for that conditional. Thus, we assume availability of a $merge$ function which --- given two hypergraphs describing the same conditional --- returns a new hypergraph containing only those bindings both arguments have in common. Such a merging algorithm is described in Section~\ref{sec:C:HGMerging}.
+Consider again a state transition $\left( s, a, s' \right)$. The hypergraph constructed for $s$ (as shown above) now describes how the predicates in $s$ are interconnected without mentioning specific objects or variables. Thus, a hypergraph constructed for the set $s \cup \{ p \}$ where $p \in \Delta \left(s, s' \right)$ describes which bindings were present in $s$ when the effect $p$ occurred, and how $p$ are connected to them. In other words, such a hypergraph denotes the preconditions for the conditional that spawned $p$ which has not been disproven (since any binding absent from the hypergraph can not be a precondition, as it would have caused the conditional to fail in the interpretation that spawned $p$). To discern the predicate edge denoting $p$, it is explicitly labelled as an effect. If a hypergraph is constructed for the set $s \cup \{ q \}$ where $q \in \Delta \left(s,s'\right)$ is a predicate with the same name as $p$ but with different objects as arguments, it represents the preconditions observed for another interpretation of the conditional. Since both hypergraphs describe binding preconditions for the same conditional (under different interpretations), bindings that are absent from either of them can not be a precondition for that conditional. Thus, if the two hypergraphs can be merged into one which only contains bindings they have in common, then any binding absent from the newly formed hyper graph can not be preconditions of the conditional either. Such a merging algorithm is described in Section~\ref{sec:C:HGMerging}.
 
-Consider again a state transition $\left( s, a, s' \right)$. For any grounded predicate $p \in \Delta s$, a hypergraph constructed from the set $s \cup \{ p \}$ (with the predicate set representing $p$ labelled as an effect) describes the bindings that could be preconditions for the conditional with effect $p$ in $A$. That is, any binding that is not part of the hypergraph can not have been a precondition, as it was present in $s$. 
+From the above, it follows that all grounded predicates with name $n$ in $\Delta\left(s, s'\right)$ can be merged together to disprove preconditions of the conditional that spawned them. The resulting hypergraph then constitutes all bindings that have not explicitly been disproven to be predicates, and can as such be reused in for another transition.
 
-To correlate a grounded predicate $p$ observed as an effect of $\gamma(s,a)$ with its preconditions, a hypergraph can be constructed for $s \cup \{ p \}$, where the predicate edge describing $p$ is labelled as an effect. This effect hypergraph
+
+
+\begin{algorithm}
+    \caption{Algorithm for learning conditional effects using hypergraphs}\label{algo:CondEffLearn}
+    \begin{algorithmic}
+        \Function{$\textsc{Conditional-Effect-Learn}$} {$\left( s, a, s'\right)$, \texttt{HyperGraph} $U$, $K$, $C$}
+            \ForAll{predicate names $n$}
+                \ForAll{predicates $p \in \Delta s$ with name $n$}
+                    \State{Let $H_p$ be the hypergraph describing $p$}
+                    \State{$H_n \gets merge \left( H_n, H_p \right)$}
+                \EndFor
+                \ForAll{predicates $q \notin \Delta s$ with name $p$}
+                    \State{$C_n \gets C_n \cup cands\left( q, H_n \right)$}
+                \EndFor
+            \EndFor
+        \EndFunction%
+    \end{algorithmic}
+\end{algorithm}
 
 \end{document}
