--- a/Conditional/ExplainOurModels.tex
+++ b/Conditional/ExplainOurModels.tex
@@ -100,7 +100,25 @@ To summarize the our prior model for preconditions and effects we have the four 
 	Furthermore, in this model the notion of disjoint predicates (Restriction~\ref{rst:ca:no-disjuntive-conditionals}) is shown by the vertices not being connected through any type of edge.
 \end{example}
 
-Consider again a state transition $\left( s, a, s' \right)$. The hypergraph constructed for $s$ (as shown above) now describes how the predicates in $s$ are interconnected without mentioning specific objects or variables. Thus, a hypergraph constructed for the set $s \cup \{ p \}$ where $p \in \Delta \left(s, s' \right)$ describes which bindings were present in $s$ when the effect $p$ occurred, and how $p$ are connected to them. In other words, such a hypergraph denotes the preconditions for the conditional that spawned $p$ which has not been disproven (since any binding absent from the hypergraph can not be a precondition, as it would have caused the conditional to fail in the interpretation that spawned $p$). To discern the predicate edge denoting $p$, it is explicitly labelled as an effect. If a hypergraph is constructed for the set $s \cup \{ q \}$ where $q \in \Delta \left(s,s'\right)$ is a predicate with the same name as $p$ but with different objects as arguments, it represents the preconditions observed for another interpretation of the conditional. Since both hypergraphs describe binding preconditions for the same conditional (under different interpretations), bindings that are absent from either of them can not be a precondition for that conditional. Thus, if the two hypergraphs can be merged into one which only contains bindings they have in common, then any binding absent from the newly formed hyper graph can not be preconditions of the conditional either. Such a merging algorithm is described in Section~\ref{sec:C:HGMerging}.
+Consider again a state transition $\left( s, a, s' \right)$. The hypergraph constructed for $\ts(s)$ (as shown above) now describes how the predicates in $s$ are interconnected without mentioning specific objects or variables. Similarly, a single effect $p$ of action $a$ can be encoded as a hypergraph by the function $hypergraph(p,\ts(s))$, which constructs a hypergraph for $\ts(s) \cup \{p\}$, labelling the predicate edge describing $p$ as an effect.
+
+Such a hypergraph describes which bindings were present in $\ts(s)$ when the effect $p$ occurred, and how $p$ is connected to them. In other words, it denotes the preconditions for the conditional that spawned $p$ which has not been disproven, and any binding \textit{not} in the hypergraph is disproven to be a precondition.
+
+\begin{proposition}\label{prop:ca:singleConditional}
+    Consider a state transition $\left(S, a, S'\right)$ and a grounded predicate $p \in \Delta S$. By Restrictions~\ref{rst:ca:no-disjuntive-conditionals} and~\ref{rst:ca:no-multiple-effect}, there is exactly one conditional in $A$ that could be responsible for producing $p$. 
+\end{proposition}
+
+\begin{proposition}
+    For a state transition $\left( S, a, S' \right)$ and a predicate $p \in \Delta S$, any binding absent from $hypergraph \left( p, X(S) \right)$ is not a precondition for the conditional in $A$ with $p$ as effect. 
+\end{proposition}
+
+\begin{proof}[Proof by contradiction]
+    Consider a state transition $\left( S, a, S' \right)$, a predicate $p \left( o_1 \right) \in \Delta S$, and the hypergraph $H = hypergraph\left( p\left(o_1\right), X(S) \right)$. If a binding $(p_1, q_1)$ is not present in $H$ (meaning that there is no binding edge in $H$ containing $p_1$ and $q_1$), then that binding is not present in $X(S)$ (i.e.\ $q\left(o_1\right) \notin S$). Thus, if that binding was a precondition for the conditional that spawned $p\left(o_1\right)$, then that interpretation of the conditional would have failed, and $p\left( o_1 \right)$ would not have occurred in $\Delta S$. Additionally, by Proposition~\ref{prop:ca:singleConditional}, no other conditional in $A$ could have caused the effect $p \left(o_1\right)$.
+\end{proof}
+
+
+
+Thus, a hypergraph constructed for the set $s \cup \{ p \}$ where $p \in \Delta \left(s, s' \right)$ describes which bindings were present in $s$ when the effect $p$ occurred, and how $p$ are connected to them. In other words, such a hypergraph denotes the preconditions for the conditional that spawned $p$ which has not been disproven (since any binding absent from the hypergraph can not be a precondition, as it would have caused the conditional to fail in the interpretation that spawned $p$). To discern the predicate edge denoting $p$, it is explicitly labelled as an effect. If a hypergraph is constructed for the set $s \cup \{ q \}$ where $q \in \Delta \left(s,s'\right)$ is a predicate with the same name as $p$ but with different objects as arguments, it represents the preconditions observed for another interpretation of the conditional. Since both hypergraphs describe binding preconditions for the same conditional (under different interpretations), bindings that are absent from either of them can not be a precondition for that conditional. Thus, if the two hypergraphs can be merged into one which only contains bindings they have in common, then any binding absent from the newly formed hyper graph can not be preconditions of the conditional either. Such a merging algorithm is described in Section~\ref{sec:C:HGMerging}.
 
 From the above, it follows that all grounded predicates with name $n$ in $\Delta\left(s, s'\right)$ can be merged together to disprove preconditions of the conditional that spawned them. The resulting hypergraph then constitutes all bindings that have not explicitly been disproven to be predicates, and can as such be reused in for another transition.
 
