--- a/Conditional/ExplainOurModels.tex
+++ b/Conditional/ExplainOurModels.tex
@@ -105,10 +105,10 @@ Consider again a state transition $\left( s, a, s' \right)$. The hypergraph cons
 Such a hypergraph describes which bindings were present in $\ts(s)$ when the effect $p$ occurred, and how $p$ is connected to them. In other words, it denotes the preconditions for the conditional that spawned $p$ which has not been disproven, and any binding \textit{not} in the hypergraph is disproven to be a precondition.
 
 \begin{proposition}\label{prop:ca:singleConditional}
-    Consider a state transition $\left(S, a, S'\right)$ and a grounded predicate $p \in \Delta S$. By Restrictions~\ref{rst:ca:no-disjuntive-conditionals} and~\ref{rst:ca:no-multiple-effect}, there is exactly one conditional in $A$ that could be responsible for producing $p$. 
+    Consider a state transition $\left(S, a, S'\right)$ and a grounded predicate $p \in \Delta S$. By Restrictions~\ref{rst:ca:no-disjuntive-conditionals} and~\ref{rst:ca:no-multiple-effect}, there is exactly one conditional in $A$ that could be responsible for producing $p$. Consequently, any two predicates in $\Delta s$ with the same name are effects of the same conditional.
 \end{proposition}
 
-\begin{proposition}
+\begin{proposition}\label{prop:ca:disprovenHg}
     For a state transition $\left( S, a, S' \right)$ and a predicate $p \in \Delta S$, any binding absent from $hypergraph \left( p, X(S) \right)$ is not a precondition for the conditional in $A$ with $p$ as effect. 
 \end{proposition}
 
@@ -116,7 +116,9 @@ Such a hypergraph describes which bindings were present in $\ts(s)$ when the eff
     Consider a state transition $\left( S, a, S' \right)$, a predicate $p \left( o_1 \right) \in \Delta S$, and the hypergraph $H = hypergraph\left( p\left(o_1\right), X(S) \right)$. If a binding $(p_1, q_1)$ is not present in $H$ (meaning that there is no binding edge in $H$ containing $p_1$ and $q_1$), then that binding is not present in $X(S)$ (i.e.\ $q\left(o_1\right) \notin S$). Thus, if that binding was a precondition for the conditional that spawned $p\left(o_1\right)$, then that interpretation of the conditional would have failed, and $p\left( o_1 \right)$ would not have occurred in $\Delta S$. Additionally, by Proposition~\ref{prop:ca:singleConditional}, no other conditional in $A$ could have caused the effect $p \left(o_1\right)$.
 \end{proof}
 
+Recall that any two predicates $p$ and $q$ in $\Delta S$ with the same name are effects of the same conditional (by Proposition~\ref{prop:ca:singleConditional}), and that any bindings absent from \textit{either} of the hypergraphs $H_p = hypergraph(p, X(S))$ and $H_q = hypergraph(q, X(S))$ are disproven to be preconditions of that conditional (by Proposition~\ref{prop:ca:disprovenHg}). Consequently, if the two hypergraphs can be merged into one hypergraph $H'$, such that $H'$ only contains bindings that $H_p$ and $H_q$ has in common, then any binding absent from $H'$ can not be a precondition for the conditional either. Note that as vertices in the two hypergraphs have unique identifiers, the merging function c An algorithm for such a hypergraph merging algorithm (denoted $merge\left(H_1, H_2\right)$ in the following) is presented in Section~\ref{sec:C:HGMerging}, but it is 
 
+In the following, we will assume availability of such a merging function (denoted $merge$), and a detailed algorithm can be found in Section~\ref{sec:C:HGMerging}.
 
 Thus, a hypergraph constructed for the set $s \cup \{ p \}$ where $p \in \Delta \left(s, s' \right)$ describes which bindings were present in $s$ when the effect $p$ occurred, and how $p$ are connected to them. In other words, such a hypergraph denotes the preconditions for the conditional that spawned $p$ which has not been disproven (since any binding absent from the hypergraph can not be a precondition, as it would have caused the conditional to fail in the interpretation that spawned $p$). To discern the predicate edge denoting $p$, it is explicitly labelled as an effect. If a hypergraph is constructed for the set $s \cup \{ q \}$ where $q \in \Delta \left(s,s'\right)$ is a predicate with the same name as $p$ but with different objects as arguments, it represents the preconditions observed for another interpretation of the conditional. Since both hypergraphs describe binding preconditions for the same conditional (under different interpretations), bindings that are absent from either of them can not be a precondition for that conditional. Thus, if the two hypergraphs can be merged into one which only contains bindings they have in common, then any binding absent from the newly formed hyper graph can not be preconditions of the conditional either. Such a merging algorithm is described in Section~\ref{sec:C:HGMerging}.
 
